--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -12,6 +12,7 @@ constraintlayout = "2.2.0"
 lifecycleRuntimeKtx = "2.8.7"
 
 retro = "2.11.0"
+okHttp = "4.12.0"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -26,6 +27,9 @@ androidx-constraintlayout = { group = "androidx.constraintlayout", name = "const
 
 retro = {module = "com.squareup.retrofit2:retrofit", version.ref = "retro"}
 retro-conv = {module = "com.squareup.retrofit2:converter-gson", version.ref = "retro"}
+
+okHttp = { module = "com.squareup.okhttp3:okhttp", version.ref = "okHttp" }
+okHttp-logging = { module = "com.squareup.okhttp3:logging-interceptor", version.ref = "okHttp" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
